add: fetches and table scrolling ui ux